--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vinyl Store</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -106,8 +106,51 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="address__container">
+                        <span class="span__circle"></span>
+
+                        <div class="address__text">
+                            <div class="address__title">and you can visit our store in:</div>
+
+                            <div class="address__list">
+                                <ul>
+                                    <li>London, 30 Berwick St</li>
+                                    <li>Luxembourg 16 Rue du Marche-aux-herbes</li>
+                                    <li>Berlin, Zossener Str. 35</li>
+                                    <li>Praha, Trojanova 9</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="history-article__container">
+                        <div class="history-article__title">Wanna know more <br> about vinyl history?</div>
+                        <div class="history-article__link">
+                            <a href="/vinyl-history block/index.html">go ahead →</a>
+                        </div>
+                    </div>
                 </div>
             </main>
+
+            <footer class="footer">
+                <div class="footer__container">
+                    <div class="footer__content">
+                        <div class="footer__contacts">
+                            <div class="contacts__title">You can contact with us:</div>
+
+                            <div class="contacts__email">vinylstore@gmail.com</div>
+
+                            <div class="contacts__social-media">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 
