genre category add

--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
 
                         <div class="genre-choice__container">
                             <div class="genre__block">
-                                <a href="#"><p>Rock</p></a>
+                                <a href="/music category/Rock music category/index.html"><p>Rock</p></a>
                             </div>
                             <div class="genre__block">
-                                <a href="#"><p>Metal</p></a>
+                                <a href="/music category/Metal music category/index.html"><p>Metal</p></a>
                             </div>
                             <div class="genre__block">
-                                <a href="#"><p>Pop</p></a>
+                                <a href="/music category/Pop music category/index.html"><p>Pop</p></a>
                             </div>
                             <div class="genre__block">
-                                <a href="#"><p>Jazz</p></a>
+                                <a href="/music category/Jazz music category/index.html"><p>Jazz</p></a>
                             </div>
                             <div class="genre__block">
-                                <a href="#"><p>Classic</p></a>
+                                <a href="/music category/Classic music category/index.html"><p>Classic</p></a>
                             </div>
                             <div class="genre__block">
-                                <a href="#"><p>Blues</p></a>
+                                <a href="/music category/Blues music category/index.html"><p>Blues</p></a>
                             </div>
                         </div>
                     </div>
@@ -142,10 +142,9 @@
                             <div class="contacts__email">vinylstore@gmail.com</div>
 
                             <div class="contacts__social-media">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
+                                <a class="icons" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                                <a class="icons" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                                <a class="icons" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
                             </div>
                         </div>
                     </div>
@@ -155,6 +154,7 @@
     </div>
 
     <script src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </body>
 
 </html>
