music category adaptation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
 
                         <div class="most-popular-choice__caption">
-                            <a href="#">see more</a>
+                            <a href="/music category/Most popular choice/index.html">see more</a>
                         </div>
 
                         <span class="main-span"></span>
@@ -145,6 +145,15 @@
                                 <a class="icons" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                                 <a class="icons" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
                                 <a class="icons" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                            </div>
+                        </div>
+
+                        <div class="footer__delivery">
+                            <div class="delivery__info">
+                                <div class="info__image">
+                                    <img src="/img/delivery-icon.svg" alt="delivery icon">
+                                </div>
+                                <div class="info__caption">worldwide shipping! safe and cheap *</div>
                             </div>
                         </div>
                     </div>
