--- a/music category/Blues music category/index.html
+++ b/music category/Blues music category/index.html
@@ -20,7 +20,7 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__main">
-                        <div class="header__title">Blues — it's time for relax dance</div>
+                        <div class="header__title">Blues — time for relax dance</div>
                         <button class="header__cart"><ion-icon name="bag-handle-outline"></ion-icon></button>
                     </div>
 
