--- a/music category/Most popular choice/index.html
+++ b/music category/Most popular choice/index.html
@@ -38,22 +38,22 @@
                         <div class="sort-by-price__price-container">
                             <div class="price-container__checkbox">
                                 <label for="price1">
-                                    <input type="checkbox" name="checkbox1" id="price1" class="checkbox" checked>
+                                    <input type="checkbox" name="checkbox1" class="price price1" id="price1" class="checkbox" checked>
                                     <span></span>
                                 </label>
                                 <br>
                                 <label for="price2">
-                                    <input type="checkbox" name="checkbox2" id="price2" class="checkbox" checked>
+                                    <input type="checkbox" name="checkbox2" class="price price2" id="price2" class="checkbox" checked>
                                     <span></span>
                                 </label>
                                 <br>
                                 <label for="price3">
-                                    <input type="checkbox" name="checkbox3" id="price3" class="checkbox" checked>
+                                    <input type="checkbox" name="checkbox3" class="price price3" id="price3" class="checkbox" checked>
                                     <span></span>
                                 </label>
                                 <br>
                                 <label for="price4" >
-                                    <input type="checkbox" name="checkbox4" id="price4" class="checkbox" checked>
+                                    <input type="checkbox" name="checkbox4" class="price price4" id="price4" class="checkbox" checked>
                                     <span></span>
                                 </label>
                             </div>
