--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                             <div class="info__contacts">
                                 <ul class="contacts">
                                     <li class="contacts__tital">Contacts</li>
-                                    <li>+48-123-456-78</li>
-                                    <li>Warsaw, Zabkowska 11</li>
-                                    <li>vinylstore@gmail.com</li>
+                                    <li class="info__link">+48-123-456-78</li>
+                                    <li class="info__link">Warsaw, Zabkowska 11</li>
+                                    <li class="info__link">vinylstore@gmail.com</li>
                                     <ul class="contacts__social-media">
-                                        <li><ion-icon name="logo-instagram"></ion-icon></li>
-                                        <li><ion-icon name="logo-facebook"></ion-icon></li>
+                                        <li class="icon"><ion-icon name="logo-instagram"></ion-icon></li>
+                                        <li class="icon"><ion-icon name="logo-facebook"></ion-icon></li>
                                     </ul>
                                 </ul>
                             </div>
