main page complete

--- a/index.html
+++ b/index.html
@@ -119,20 +119,16 @@
                         </div>
                     </div>
 
-                    <div class="address__container">
-                        <span class="span__circle"></span>
+                    <div class="map">
+                        <div class="map__container">
+                            <div class="map__text">
+                                <div class="map__title">Find store in <br> your city</div>
+                            <div class="map__caption">we are open in 10 countries</div>
+                            </div>
 
-                        <div class="address__text">
-                            <div class="address__title">and you can visit our store in:</div>
-
-                            <div class="address__list">
-                                <ul>
-                                    <li>London, 30 Berwick St</li>
-                                    <li>Luxembourg 16 Rue du Marche-aux-herbes</li>
-                                    <li>Berlin, Zossener Str. 35</li>
-                                    <li>Praha, Trojanova 9</li>
-                                    <li>Warsaw, Zabkowska 11</li>
-                                </ul>
+                            <div class="map__map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26311.078696447687!2d13.395009625900343!3d52.50528609288688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e5b1ebbe1af%3A0x8e2dcbf1fb472858!2sBis%20Aufs%20Messer%20Recordstore%20Berlin%20-%20Schulze%20%26%20Dietze%20GbR!5e0!3m2!1spl!2spl!4v1680212141285!5m2!1spl!2spl"
+                                 width="600" height="430" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
