--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
 
                         <div class="most-popular-choice__caption">
-                            <a href="/music category/Most popular choice/index.html">see more</a>
+                            <a href="./music category/Most popular choice/index.html">see more</a>
                         </div>
 
                         <span class="main-span"></span>
@@ -87,32 +87,32 @@
 
                         <div class="genre-choice__container">
                             <div class="genre__block">
-                                <a href="/music category/Rock music category/index.html">
+                                <a href="./music category/Rock music category/index.html">
                                     <p>Rock</p>
                                 </a>
                             </div>
                             <div class="genre__block">
-                                <a href="/music category/Metal music category/index.html">
+                                <a href="./music category/Metal music category/index.html">
                                     <p>Metal</p>
                                 </a>
                             </div>
                             <div class="genre__block">
-                                <a href="/music category/Pop music category/index.html">
+                                <a href="./music category/Pop music category/index.html">
                                     <p>Pop</p>
                                 </a>
                             </div>
                             <div class="genre__block">
-                                <a href="/music category/Jazz music category/index.html">
+                                <a href="./music category/Jazz music category/index.html">
                                     <p>Jazz</p>
                                 </a>
                             </div>
                             <div class="genre__block">
-                                <a href="/music category/Classic music category/index.html">
+                                <a href="./music category/Classic music category/index.html">
                                     <p>Classic</p>
                                 </a>
                             </div>
                             <div class="genre__block">
-                                <a href="/music category/Blues music category/index.html">
+                                <a href="./music category/Blues music category/index.html">
                                     <p>Blues</p>
                                 </a>
                             </div>
@@ -136,7 +136,7 @@
                     <div class="about-us__container">
                         <div class="about-us__title">Know more about us</div>
                         <div class="about-us__link">
-                            <a href="/about us block/index.html">go ahead →</a>
+                            <a href="./about us block/index.html">go ahead →</a>
                         </div>
                     </div>
                 </div>
