--- a/about us block/index.html
+++ b/about us block/index.html
@@ -30,17 +30,20 @@
 
                     <div class="hero__statistic">
                         <div class="statistic__title">It's gonna <br> be amazing year</div>
-                        <div class="statistic__sales">
-                            <div class="statistic__number">10k</div>
-                            <div class="statistic__description">product sales</div>
-                        </div>
-                        <div class="statistic__customers">
-                            <div class="statistic__number">8k</div>
-                            <div class="statistic__description">customers</div>
-                        </div>
-                        <div class="statistic__shops">
-                            <div class="statistic__number">10+</div>
-                            <div class="statistic__description">shops around the <br> world</div>
+
+                        <div class="statistic__content">
+                            <div class="statistic__sales">
+                                <div class="statistic__number">10k</div>
+                                <div class="statistic__description">product sales</div>
+                            </div>
+                            <div class="statistic__customers">
+                                <div class="statistic__number">8k</div>
+                                <div class="statistic__description">customers</div>
+                            </div>
+                            <div class="statistic__shops">
+                                <div class="statistic__number">10+</div>
+                                <div class="statistic__description">shops around the <br> world</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -204,12 +207,12 @@
                         <div class="info__contacts">
                             <ul class="contacts">
                                 <li class="contacts__tital">Contacts</li>
-                                <li>+48-123-456-78</li>
-                                <li>Warsaw, Zabkowska 11</li>
-                                <li>vinylstore@gmail.com</li>
+                                <li class="info__link">+48-123-456-78</li>
+                                <li class="info__link">Warsaw, Zabkowska 11</li>
+                                <li class="info__link">vinylstore@gmail.com</li>
                                 <ul class="contacts__social-media">
-                                    <li><ion-icon name="logo-instagram"></ion-icon></li>
-                                    <li><ion-icon name="logo-facebook"></ion-icon></li>
+                                    <li class="icon"><ion-icon name="logo-instagram"></ion-icon></li>
+                                    <li class="icon"><ion-icon name="logo-facebook"></ion-icon></li>
                                 </ul>
                             </ul>
                         </div>
