--- a/about us block/index.html
+++ b/about us block/index.html
@@ -51,7 +51,7 @@
                 <div class="main__main-content">
                     <div class="main__section-description">
                         <div class="section-description__image">
-                            <img src="/img/main-vinyl.png" alt="vinyl">
+                            <img src="./img/main-vinyl.png" alt="vinyl">
                         </div>
                         <div class="section-description__text">
                             <div class="text__title">Hi, I'm Michael!
